# ax-simulations

./: README.md  requirements.txt  setup.cfg
simulation/: analyze.ipynb  simulate.py  variables.py
src/: clean.py  simulator.py
with_control/: analyze.ipynb  simulate.py  variables.py
without_control/: analyze.ipynb  simulate.py  variables.py
