[metadata]
name = mega-analysis
version = 0.0.1
author = Dillon Bowen
author_email = dsbowen@wharton.upenn.edu
description = Data analysis for megastudies project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dsbowen.gitlab.io/mega-analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
# install_requires = 

[build_sphinx]
project = Megastudy Analysis
copyright = 2022, Dillon Bowen
release = 0.0.1
source-dir = docs

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    if TYPE_CHECKING:

    # Ignore error messages
    raise AssertionError
    raise NotImplementedError

    # Ignore un-runnable code
    if 0:
    if __name__ == "__main__":
omit = 
    tests/*
    venv/*

[mypy]
ignore_missing_imports = True
